[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Graphics/insideTileset.png" type="Texture" id=2]
[ext_resource path="res://Original Graphic Files/wallOfWailsBG.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Inside.gd" type="Script" id=4]
[ext_resource path="res://Graphics/dram.png" type="Texture" id=5]
[ext_resource path="res://Original Graphic Files/icon.png" type="Texture" id=6]
[ext_resource path="res://GUI.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 40, 96 )

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=4]
0/name = "insideTileset.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 384, 64 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 64, 64 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "insideTileset.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 64, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 1 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "insideTileset.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 64, 64, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 2 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "insideTileset.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 128, 64, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 3 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 40, 40 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 96, 24 )

[node name="Inside" type="Node2D"]
script = ExtResource( 4 )

[node name="End" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="End"]
position = Vector2( 4320, 288 )
z_index = 1
shape = SubResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" parent="CanvasLayer" instance=ExtResource( 7 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 480, 464 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 4 )
collision_layer = 17
format = 1
tile_data = PoolIntArray( -1376221, 1, 0, -1376220, 1, 0, -1376219, 1, 0, -1376218, 1, 0, -1376217, 1, 0, -1376216, 1, 0, -1376215, 1, 0, -1376214, 2, 0, -1376213, 1, 0, -1376212, 1, 0, -1376211, 1, 0, -1376210, 1, 0, -1376209, 1, 0, -1376208, 2, 0, -1376207, 1, 0, -1376206, 1, 0, -1376205, 1, 0, -1376204, 1, 0, -1310685, 1, 0, -1310684, 0, 4, -1310683, 0, 4, -1310682, 0, 5, -1310681, 0, 4, -1310680, 0, 4, -1310679, 0, 4, -1310678, 0, 4, -1310677, 0, 4, -1310676, 0, 4, -1310675, 0, 4, -1310674, 0, 4, -1310673, 0, 4, -1310672, 0, 5, -1310671, 0, 4, -1310670, 0, 4, -1310669, 0, 4, -1310668, 1, 0, -1245149, 2, 0, -1245148, 0, 4, -1245147, 0, 2, -1245146, 0, 2, -1245145, 0, 3, -1245144, 0, 2, -1245143, 0, 2, -1245142, 0, 2, -1245141, 0, 2, -1245140, 0, 2, -1245139, 0, 2, -1245138, 0, 2, -1245137, 0, 2, -1245136, 0, 2, -1245135, 0, 2, -1245134, 0, 2, -1245133, 0, 4, -1245132, 1, 0, -1179613, 1, 0, -1179612, 0, 4, -1179611, 0, 2, -1179610, 0, 2, -1179609, 0, 2, -1179608, 0, 2, -1179607, 0, 2, -1179606, 0, 2, -1179605, 0, 2, -1179604, 0, 2, -1179603, 0, 2, -1179602, 0, 2, -1179601, 0, 2, -1179600, 0, 3, -1179599, 0, 2, -1179598, 0, 2, -1179597, 0, 4, -1179596, 1, 0, -1114077, 2, 0, -1114076, 0, 4, -1114075, 0, 2, -1114074, 0, 2, -1114073, 0, 3, -1114072, 0, 2, -1114071, 0, 2, -1114070, 0, 2, -1114069, 0, 2, -1114068, 0, 3, -1114067, 0, 2, -1114066, 0, 2, -1114065, 0, 2, -1114064, 0, 2, -1114063, 0, 2, -1114062, 0, 2, -1114061, 0, 4, -1114060, 1, 0, -1048541, 1, 0, -1048540, 0, 4, -1048539, 0, 2, -1048538, 0, 2, -1048537, 0, 2, -1048536, 0, 2, -1048535, 0, 2, -1048534, 0, 2, -1048533, 0, 2, -1048532, 0, 2, -1048531, 0, 2, -1048530, 0, 2, -1048529, 0, 2, -1048528, 0, 2, -1048527, 0, 2, -1048526, 0, 2, -1048525, 0, 4, -1048524, 1, 0, -983005, 1, 0, -983004, 0, 4, -983003, 0, 4, -983002, 0, 4, -983001, 0, 4, -983000, 0, 2, -982999, 0, 4, -982998, 0, 4, -982997, 0, 4, -982996, 0, 5, -982995, 0, 4, -982994, 0, 4, -982993, 0, 4, -982992, 0, 4, -982991, 0, 4, -982990, 0, 2, -982989, 0, 4, -982988, 1, 0, -917469, 1, 0, -917468, 1, 0, -917467, 1, 0, -917466, 1, 0, -917465, 0, 4, -917464, 0, 0, -917463, 0, 4, -917462, 1, 0, -917461, 1, 0, -917460, 1, 0, -917459, 2, 0, -917458, 1, 0, -917457, 1, 0, -917456, 1, 0, -917455, 0, 4, -917454, 0, 0, -917453, 0, 4, -917452, 1, 0, -851930, 1, 0, -851929, 0, 4, -851928, 0, 0, -851927, 0, 4, -851926, 1, 0, -851920, 1, 0, -851919, 0, 4, -851918, 0, 0, -851917, 0, 4, -851916, 1, 0, -786394, 1, 0, -786393, 0, 4, -786392, 0, 0, -786391, 0, 4, -786390, 1, 0, -786384, 1, 0, -786383, 0, 4, -786382, 0, 0, -786381, 0, 4, -786380, 1, 0, -720884, 1, 0, -720883, 1, 0, -720882, 1, 0, -720881, 1, 0, -720880, 1, 0, -720879, 1, 0, -720878, 1, 0, -720877, 1, 0, -720876, 1, 0, -720875, 1, 0, -720874, 2, 0, -720873, 1, 0, -720872, 1, 0, -720871, 1, 0, -720870, 1, 0, -720869, 1, 0, -720868, 2, 0, -720867, 1, 0, -720866, 1, 0, -720865, 1, 0, -720864, 1, 0, -720863, 1, 0, -720862, 1, 0, -720861, 1, 0, -720858, 1, 0, -720857, 0, 4, -720856, 0, 0, -720855, 0, 4, -720854, 1, 0, -720848, 1, 0, -720847, 0, 5, -720846, 0, 0, -720845, 0, 4, -720844, 1, 0, -655348, 2, 0, -655347, 0, 4, -655346, 0, 4, -655345, 0, 4, -655344, 0, 4, -655343, 0, 4, -655342, 0, 4, -655341, 1, 0, -655340, 0, 4, -655339, 0, 4, -655338, 0, 4, -655337, 0, 4, -655336, 0, 5, -655335, 0, 4, -655334, 0, 4, -655333, 0, 4, -655332, 0, 4, -655331, 0, 4, -655330, 0, 4, -655329, 0, 4, -655328, 0, 4, -655327, 0, 4, -655326, 0, 4, -655325, 1, 0, -655322, 1, 0, -655321, 0, 4, -655320, 0, 1, -655319, 0, 4, -655318, 1, 0, -655312, 1, 0, -655311, 0, 4, -655310, 0, 0, -655309, 0, 4, -655308, 2, 0, -589812, 1, 0, -589811, 0, 4, -589810, 0, 2, -589809, 0, 2, -589808, 0, 2, -589807, 0, 2, -589806, 0, 4, -589805, 0, 4, -589804, 0, 4, -589803, 0, 2, -589802, 0, 2, -589801, 0, 2, -589800, 0, 2, -589799, 0, 2, -589798, 0, 2, -589797, 0, 2, -589796, 0, 2, -589795, 0, 2, -589794, 0, 2, -589793, 0, 2, -589792, 0, 2, -589791, 0, 2, -589790, 0, 4, -589789, 1, 0, -589788, 1, 0, -589787, 2, 0, -589786, 1, 0, -589785, 0, 4, -589784, 0, 0, -589783, 0, 5, -589782, 1, 0, -589776, 1, 0, -589775, 0, 4, -589774, 0, 0, -589773, 0, 4, -589772, 1, 0, -524276, 1, 0, -524275, 0, 4, -524274, 0, 3, -524273, 0, 2, -524272, 0, 2, -524271, 0, 2, -524270, 0, 4, -524269, 0, 4, -524268, 0, 4, -524267, 0, 2, -524266, 0, 2, -524265, 0, 2, -524264, 0, 2, -524263, 0, 2, -524262, 0, 2, -524261, 0, 3, -524260, 0, 2, -524259, 0, 2, -524258, 0, 2, -524257, 0, 2, -524256, 0, 2, -524255, 0, 2, -524254, 0, 4, -524253, 0, 5, -524252, 0, 4, -524251, 0, 4, -524250, 0, 4, -524249, 0, 4, -524248, 0, 0, -524247, 0, 4, -524246, 2, 0, -524240, 2, 0, -524239, 0, 4, -524238, 0, 0, -524237, 0, 4, -524236, 1, 0, -458740, 2, 0, -458739, 0, 4, -458738, 0, 2, -458737, 0, 2, -458736, 0, 2, -458735, 0, 2, -458734, 0, 4, -458733, 1, 0, -458732, 0, 5, -458731, 0, 2, -458730, 0, 2, -458729, 0, 2, -458728, 0, 2, -458727, 0, 3, -458726, 0, 2, -458725, 0, 2, -458724, 0, 2, -458723, 0, 2, -458722, 0, 2, -458721, 0, 2, -458720, 0, 2, -458719, 0, 2, -458718, 0, 2, -458717, 0, 2, -458716, 0, 2, -458715, 0, 3, -458714, 0, 2, -458713, 0, 2, -458712, 0, 1, -458711, 0, 4, -458710, 1, 0, -458704, 1, 0, -458703, 0, 4, -458702, 0, 0, -458701, 0, 5, -458700, 1, 0, -393204, 1, 0, -393203, 0, 4, -393202, 0, 4, -393201, 0, 4, -393200, 0, 4, -393199, 0, 4, -393198, 0, 4, -393197, 2, 0, -393196, 0, 4, -393195, 0, 2, -393194, 0, 2, -393193, 0, 2, -393192, 0, 2, -393191, 0, 2, -393190, 0, 2, -393189, 0, 2, -393188, 0, 2, -393187, 0, 2, -393186, 0, 2, -393185, 0, 2, -393184, 0, 2, -393183, 0, 2, -393182, 0, 4, -393181, 0, 4, -393180, 0, 4, -393179, 0, 4, -393178, 0, 4, -393177, 0, 4, -393176, 0, 0, -393175, 0, 4, -393174, 1, 0, -393168, 1, 0, -393167, 0, 4, -393166, 0, 0, -393165, 0, 4, -393164, 1, 0, -327668, 1, 0, -327667, 1, 0, -327666, 1, 0, -327665, 1, 0, -327664, 1, 0, -327663, 1, 0, -327662, 1, 0, -327661, 1, 0, -327660, 0, 4, -327659, 0, 2, -327658, 0, 2, -327657, 0, 3, -327656, 0, 2, -327655, 0, 2, -327654, 0, 2, -327653, 0, 2, -327652, 0, 3, -327651, 0, 2, -327650, 0, 2, -327649, 0, 2, -327648, 0, 3, -327647, 0, 2, -327646, 0, 4, -327645, 1, 0, -327644, 1, 0, -327643, 2, 0, -327642, 1, 0, -327641, 0, 4, -327640, 0, 0, -327639, 0, 4, -327638, 1, 0, -327632, 1, 0, -327631, 0, 4, -327630, 0, 0, -327629, 0, 4, -327628, 1, 0, -262125, 1, 0, -262124, 0, 4, -262123, 0, 2, -262122, 0, 2, -262121, 0, 2, -262120, 0, 2, -262119, 0, 2, -262118, 0, 2, -262117, 0, 2, -262116, 0, 2, -262115, 0, 2, -262114, 0, 2, -262113, 0, 2, -262112, 0, 2, -262111, 0, 2, -262110, 0, 4, -262109, 1, 0, -262106, 1, 0, -262105, 0, 4, -262104, 0, 0, -262103, 0, 4, -262102, 1, 0, -262096, 1, 0, -262095, 0, 4, -262094, 0, 1, -262093, 0, 4, -262092, 2, 0, -196589, 1, 0, -196588, 0, 4, -196587, 0, 2, -196586, 0, 2, -196585, 0, 2, -196584, 0, 2, -196583, 0, 2, -196582, 0, 2, -196581, 0, 2, -196580, 0, 2, -196579, 0, 2, -196578, 0, 2, -196577, 0, 2, -196576, 0, 2, -196575, 0, 2, -196574, 0, 4, -196573, 1, 0, -196570, 1, 0, -196569, 0, 4, -196568, 0, 1, -196567, 0, 4, -196566, 1, 0, -196560, 1, 0, -196559, 0, 4, -196558, 0, 0, -196557, 0, 4, -196556, 1, 0, -131053, 1, 0, -131052, 0, 4, -131051, 0, 4, -131050, 0, 5, -131049, 0, 4, -131048, 0, 4, -131047, 0, 4, -131046, 0, 4, -131045, 0, 2, -131044, 0, 4, -131043, 0, 4, -131042, 0, 4, -131041, 0, 4, -131040, 0, 5, -131039, 0, 4, -131038, 0, 4, -131037, 1, 0, -131034, 1, 0, -131033, 0, 4, -131032, 0, 0, -131031, 0, 4, -131030, 1, 0, -131024, 1, 0, -131023, 0, 4, -131022, 0, 0, -131021, 0, 4, -131020, 1, 0, -131017, 1, 0, -131016, 1, 0, -131015, 1, 0, -131014, 1, 0, -131013, 1, 0, -131012, 1, 0, -131011, 2, 0, -131010, 1, 0, -131009, 1, 0, -131008, 1, 0, -131007, 1, 0, -131006, 1, 0, -131005, 1, 0, -65517, 1, 0, -65516, 1, 0, -65515, 1, 0, -65514, 1, 0, -65513, 1, 0, -65512, 1, 0, -65511, 1, 0, -65510, 0, 4, -65509, 0, 2, -65508, 0, 4, -65507, 2, 0, -65506, 2, 0, -65505, 1, 0, -65504, 1, 0, -65503, 1, 0, -65502, 1, 0, -65501, 1, 0, -65498, 1, 0, -65497, 0, 4, -65496, 0, 0, -65495, 0, 4, -65494, 2, 0, -65488, 1, 0, -65487, 0, 5, -65486, 0, 0, -65485, 0, 4, -65484, 1, 0, -65481, 1, 0, -65480, 0, 4, -65479, 0, 4, -65478, 0, 4, -65477, 0, 4, -65476, 0, 4, -65475, 0, 4, -65474, 0, 4, -65473, 0, 4, -65472, 0, 4, -65471, 0, 4, -65470, 0, 4, -65469, 1, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 2, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 2, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 25, 1, 0, 26, 0, 4, 27, 0, 2, 28, 0, 4, 29, 1, 0, 38, 1, 0, 39, 0, 4, 40, 0, 0, 41, 0, 4, 42, 2, 0, 48, 2, 0, 49, 0, 4, 50, 0, 0, 51, 0, 4, 52, 1, 0, 55, 1, 0, 56, 0, 4, 57, 0, 3, 58, 0, 2, 59, 0, 2, 60, 0, 2, 61, 0, 2, 62, 0, 2, 63, 0, 2, 64, 0, 2, 65, 0, 2, 66, 0, 4, 67, 2, 0, 65536, 1, 0, 65537, 0, 4, 65538, 0, 4, 65539, 0, 4, 65540, 0, 4, 65541, 0, 4, 65542, 0, 4, 65543, 0, 4, 65544, 0, 4, 65545, 0, 4, 65546, 0, 4, 65547, 0, 4, 65548, 0, 4, 65549, 0, 4, 65550, 0, 4, 65551, 0, 4, 65552, 1, 0, 65561, 2, 0, 65562, 0, 4, 65563, 0, 2, 65564, 0, 4, 65565, 1, 0, 65574, 1, 0, 65575, 0, 4, 65576, 0, 0, 65577, 0, 4, 65578, 2, 0, 65584, 1, 0, 65585, 0, 4, 65586, 0, 0, 65587, 0, 4, 65588, 1, 0, 65591, 1, 0, 65592, 0, 4, 65593, 0, 2, 65594, 0, 2, 65595, 0, 2, 65596, 0, 2, 65597, 0, 2, 65598, 0, 2, 65599, 0, 3, 65600, 0, 2, 65601, 0, 2, 65602, 0, 4, 65603, 1, 0, 131072, 1, 0, 131073, 0, 4, 131074, 0, 4, 131075, 0, 4, 131076, 0, 4, 131077, 0, 4, 131078, 0, 4, 131079, 0, 4, 131080, 0, 4, 131081, 0, 4, 131082, 0, 4, 131083, 0, 4, 131084, 0, 4, 131085, 0, 5, 131086, 0, 4, 131087, 0, 4, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 131092, 1, 0, 131093, 1, 0, 131094, 2, 0, 131095, 1, 0, 131096, 1, 0, 131097, 1, 0, 131098, 0, 4, 131099, 0, 3, 131100, 0, 4, 131101, 1, 0, 131102, 1, 0, 131103, 1, 0, 131104, 1, 0, 131105, 1, 0, 131106, 1, 0, 131107, 1, 0, 131108, 1, 0, 131109, 2, 0, 131110, 1, 0, 131111, 0, 4, 131112, 0, 1, 131113, 0, 4, 131114, 1, 0, 131120, 1, 0, 131121, 0, 4, 131122, 0, 0, 131123, 0, 4, 131124, 1, 0, 131125, 1, 0, 131126, 1, 0, 131127, 2, 0, 131128, 0, 4, 131129, 0, 2, 131130, 0, 2, 131131, 0, 3, 131132, 0, 2, 131133, 0, 2, 131134, 0, 2, 131135, 0, 2, 131136, 0, 2, 131137, 0, 2, 131138, 0, 4, 131139, 1, 0, 196608, 1, 0, 196609, 0, 4, 196610, 0, 4, 196611, 0, 5, 196612, 0, 4, 196613, 0, 4, 196614, 0, 0, 196615, 0, 1, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 4, 196625, 0, 4, 196626, 0, 4, 196627, 0, 4, 196628, 0, 4, 196629, 0, 5, 196630, 0, 4, 196631, 0, 4, 196632, 0, 4, 196633, 0, 4, 196634, 0, 4, 196635, 0, 2, 196636, 0, 4, 196637, 0, 4, 196638, 0, 4, 196639, 0, 4, 196640, 0, 4, 196641, 0, 4, 196642, 0, 4, 196643, 0, 4, 196644, 0, 5, 196645, 0, 4, 196646, 0, 4, 196647, 0, 4, 196648, 0, 0, 196649, 0, 4, 196650, 1, 0, 196656, 1, 0, 196657, 0, 4, 196658, 0, 0, 196659, 0, 4, 196660, 0, 4, 196661, 0, 4, 196662, 0, 4, 196663, 0, 4, 196664, 0, 4, 196665, 0, 2, 196666, 0, 2, 196667, 0, 2, 196668, 0, 2, 196669, 0, 3, 196670, 0, 2, 196671, 0, 2, 196672, 0, 2, 196673, 0, 2, 196674, 0, 4, 196675, 3, 0, 262144, 2, 0, 262145, 0, 4, 262146, 0, 4, 262147, 0, 4, 262148, 0, 4, 262149, 0, 4, 262150, 0, 1, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 1, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 1, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 0, 0, 262174, 0, 0, 262175, 0, 0, 262176, 0, 1, 262177, 0, 0, 262178, 0, 0, 262179, 0, 0, 262180, 0, 0, 262181, 0, 0, 262182, 0, 0, 262183, 0, 0, 262184, 0, 0, 262185, 0, 4, 262186, 1, 0, 262192, 1, 0, 262193, 0, 4, 262194, 0, 0, 262195, 0, 0, 262196, 0, 1, 262197, 0, 0, 262198, 0, 0, 262199, 0, 0, 262200, 0, 2, 262201, 0, 2, 262202, 0, 2, 262203, 0, 2, 262204, 0, 3, 262205, 0, 3, 262206, 0, 3, 262207, 0, 2, 262208, 0, 2, 262209, 0, 2, 262210, 0, 4, 262211, 3, 0, 327680, 1, 0, 327681, 0, 4, 327682, 0, 5, 327683, 0, 4, 327684, 0, 4, 327685, 0, 4, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 4, 327697, 0, 4, 327698, 0, 4, 327699, 0, 4, 327700, 0, 4, 327701, 0, 4, 327702, 0, 4, 327703, 0, 4, 327704, 0, 4, 327705, 0, 4, 327706, 0, 4, 327707, 0, 4, 327708, 0, 4, 327709, 0, 5, 327710, 0, 4, 327711, 0, 4, 327712, 0, 4, 327713, 0, 4, 327714, 0, 4, 327715, 0, 4, 327716, 0, 4, 327717, 0, 4, 327718, 0, 4, 327719, 0, 4, 327720, 0, 4, 327721, 0, 4, 327722, 1, 0, 327728, 1, 0, 327729, 0, 4, 327730, 0, 4, 327731, 0, 4, 327732, 0, 4, 327733, 0, 4, 327734, 0, 4, 327735, 0, 4, 327736, 0, 4, 327737, 0, 2, 327738, 0, 3, 327739, 0, 2, 327740, 0, 2, 327741, 0, 3, 327742, 0, 2, 327743, 0, 2, 327744, 0, 2, 327745, 0, 2, 327746, 0, 4, 327747, 3, 0, 393216, 1, 0, 393217, 0, 4, 393218, 0, 4, 393219, 0, 4, 393220, 0, 4, 393221, 0, 4, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 4, 393226, 0, 4, 393227, 0, 4, 393228, 0, 5, 393229, 0, 4, 393230, 0, 4, 393231, 0, 4, 393232, 1, 0, 393233, 1, 0, 393234, 2, 0, 393235, 1, 0, 393236, 1, 0, 393237, 1, 0, 393238, 1, 0, 393239, 1, 0, 393240, 1, 0, 393241, 1, 0, 393242, 1, 0, 393243, 1, 0, 393244, 1, 0, 393245, 1, 0, 393246, 1, 0, 393247, 1, 0, 393248, 1, 0, 393249, 1, 0, 393250, 1, 0, 393251, 1, 0, 393252, 1, 0, 393253, 2, 0, 393254, 1, 0, 393255, 1, 0, 393256, 1, 0, 393257, 1, 0, 393258, 1, 0, 393264, 1, 0, 393265, 1, 0, 393266, 1, 0, 393267, 2, 0, 393268, 1, 0, 393269, 1, 0, 393270, 1, 0, 393271, 1, 0, 393272, 0, 4, 393273, 0, 2, 393274, 0, 2, 393275, 0, 2, 393276, 0, 2, 393277, 0, 2, 393278, 0, 2, 393279, 0, 2, 393280, 0, 2, 393281, 0, 3, 393282, 0, 4, 393283, 1, 0, 458752, 1, 0, 458753, 0, 4, 458754, 0, 4, 458755, 0, 4, 458756, 0, 4, 458757, 0, 4, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 4, 458762, 0, 4, 458763, 0, 4, 458764, 0, 4, 458765, 0, 4, 458766, 0, 4, 458767, 0, 4, 458768, 1, 0, 458807, 1, 0, 458808, 0, 4, 458809, 0, 2, 458810, 0, 3, 458811, 0, 2, 458812, 0, 3, 458813, 0, 2, 458814, 0, 2, 458815, 0, 2, 458816, 0, 2, 458817, 0, 2, 458818, 0, 4, 458819, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 2, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 3, 0, 524295, 3, 0, 524296, 3, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 2, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524343, 1, 0, 524344, 0, 4, 524345, 0, 2, 524346, 0, 2, 524347, 0, 2, 524348, 0, 3, 524349, 0, 3, 524350, 0, 2, 524351, 0, 2, 524352, 0, 2, 524353, 0, 2, 524354, 0, 4, 524355, 1, 0, 589879, 1, 0, 589880, 0, 4, 589881, 0, 4, 589882, 0, 4, 589883, 0, 4, 589884, 0, 4, 589885, 0, 4, 589886, 0, 4, 589887, 0, 4, 589888, 0, 4, 589889, 0, 4, 589890, 0, 4, 589891, 1, 0, 655415, 1, 0, 655416, 1, 0, 655417, 1, 0, 655418, 1, 0, 655419, 2, 0, 655420, 1, 0, 655421, 1, 0, 655422, 1, 0, 655423, 1, 0, 655424, 1, 0, 655425, 1, 0, 655426, 1, 0, 655427, 1, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="EnemySpawns" type="Node" parent="."]

[node name="Position2D" type="Position2D" parent="EnemySpawns"]
position = Vector2( 1152, 288 )

[node name="Position2D2" type="Position2D" parent="EnemySpawns"]
position = Vector2( 1760, 288 )

[node name="Position2D3" type="Position2D" parent="EnemySpawns"]
position = Vector2( 2592, 288 )

[node name="Position2D4" type="Position2D" parent="EnemySpawns"]
position = Vector2( 1760, -224 )

[node name="Position2D5" type="Position2D" parent="EnemySpawns"]
position = Vector2( 1504, -480 )

[node name="Position2D6" type="Position2D" parent="EnemySpawns"]
position = Vector2( 2016, -480 )

[node name="Position2D7" type="Position2D" parent="EnemySpawns"]
position = Vector2( 2592, -704 )

[node name="Position2D8" type="Position2D" parent="EnemySpawns"]
position = Vector2( 2592, -1088 )

[node name="Position2D9" type="Position2D" parent="EnemySpawns"]
position = Vector2( 3040, -1088 )

[node name="Position2D10" type="Position2D" parent="EnemySpawns"]
position = Vector2( 3232, -576 )

[node name="Position2D11" type="Position2D" parent="EnemySpawns"]
position = Vector2( 3232, 288 )

[node name="Position2D12" type="Position2D" parent="EnemySpawns"]
position = Vector2( 3936, 288 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 2464, -388 )
scale = Vector2( 4.09996, 2.80231 )
z_index = -1
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Key" type="Area2D" parent="."]
position = Vector2( 1024, -480 )
collision_layer = 8

[node name="Sprite" type="Sprite" parent="Key"]
scale = Vector2( 0.426667, 0.426667 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Key"]
shape = SubResource( 5 )

[node name="Door" type="Area2D" parent="."]
visible = false
position = Vector2( 3232, -888 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="Door"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -7.62939e-06 )
scale = Vector2( 3, 0.25 )
texture = ExtResource( 6 )
[connection signal="body_entered" from="End" to="Player" method="_on_End_body_entered"]
[connection signal="body_entered" from="Key" to="." method="_on_Key_body_entered"]
